Code style and Java language level adoptions
* Replace `Arrays.asList()` with single element with `List.of()`
* enhanced switch expression
* pattern variable
* Use String.repeat()
* Use `.isEmpty()`
* Remove unused `ParseError`
* Remove unused function in TypeErrors
* Remove duplicate `if`